ECOSCOM-4740 - Add ability to create images with ecos-apps

--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-app-artifacts.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-app-artifacts.yml
@@ -10,9 +10,15 @@ actions:
   - uiserv/action@artifact-deploy
 
 predicate:
-  t: eq
-  att: system
-  val: false
+  t: and
+  v:
+    - t: eq
+      a: system
+      v: false
+    # types on ecos-app form should be selected in other journal
+    - t: not-eq
+      a: type
+      v: model/type
 
 columns:
 
