--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yml
@@ -34,7 +34,9 @@ columns:
     name: { ru: Идентификатор источника, en: Source ID }
 
   - id: modifiedIso
+    type: DATETIME
     name: { ru: Дата изменения, en: Modified }
 
   - id: createdIso
+    type: DATETIME
     name: { ru: Дата создания, en: Created }
