ECOSCOM-4471 - Add technical and business data type categories

--- a/src/main/resources/eapps/artifacts/model/type/ecos-patch.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-patch.yml
@@ -1,7 +1,8 @@
-
+---
 id: ecos-patch
 
 #journalRef: uiserv/journal@ecos-patches
+system: true
 
 model:
   attributes:
@@ -31,4 +32,3 @@ model:
     - id: nextExecDate
       type: DATETIME
     - id: lastError
-
