--- a/src/main/resources/eapps/artifacts/ui/form/ecos_app_form.json
+++ b/src/main/resources/eapps/artifacts/ui/form/ecos_app_form.json
@@ -3,7 +3,8 @@
   "formKey": "",
   "system": true,
   "title": {
-    "en": "ECOS Applications Form"
+    "en": "ECOS Applications Form",
+    "ru": "Форма приложения ECOS"
   },
   "description": {},
   "customModule": null,
