--- a/src/main/resources/eapps/artifacts/ui/journal/dev-module-actions.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/dev-module-actions.yml
@@ -1,10 +1,11 @@
 ---
 id: dev-module-actions
 name:
-  ru: Dev actions
+  ru: Действия разработки
   en: Dev actions
 
 system: true
+properties: {}
 
 actions:
   - uiserv/action@dev-module-actions
@@ -18,4 +19,3 @@ columns:
   - id: description
     name: { ru: Описание, en: Description }
     type: TEXT
-
