--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-app-artifacts.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-app-artifacts.yml
@@ -3,6 +3,8 @@ id: ecos-app-artifacts
 name: { ru: Артефакты ECOS, en: ECOS Artifacts }
 
 system: true
+properties: {}
+
 typeRef: emodel/type@ecos-artifact
 
 actions:
