--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yml
@@ -3,6 +3,7 @@ id: ecos-artifacts
 name: { ru: Артефакты ECOS, en: ECOS Artifacts }
 
 system: true
+properties: {}
 
 actions:
   - uiserv/action@artifact-download-revisions
