--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-configs.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-configs.yml
@@ -3,6 +3,7 @@ id: ecos-configs
 name: { ru: Конфигурация ECOS, en: ECOS Configuration }
 
 system: true
+properties: {}
 
 sourceId: eapps/config
 
