Fix maven test ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ test:
       - target/
   script:
     - sudo chown -R maven:maven /builds
-    - mvn $MAVEN_CLI_OPTS test
+    - mvn $MAVEN_CLI_OPTS clean test
 
 mirror:
   tags:
