ECOSENT-2412 - Add ability to restrict access to enterprise features without alfresco. Enterprise License

--- a/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
+++ b/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
@@ -30,6 +30,12 @@
       "config": {
         "journalId": "ecos-configs"
       }
+    },
+    {
+      "type": "JOURNAL",
+      "config": {
+        "journalId": "ecos-licenses"
+      }
     }
   ]
 }
