ECOSENT-2412 - Add ability to restrict access to enterprise features without alfresco. Enterprise License

--- a/src/main/resources/eapps/artifacts/model/type/ecos-license.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-license.yml
@@ -28,6 +28,11 @@ model:
       name:
         ru: Тенант
         en: Tenant
+    - id: priority
+      name:
+        ru: Приоритет
+        en: Priority
+      type: NUMBER
     - id: issuedTo
       name:
         ru: Выдана на имя
