ECOSCOM-4934 - Add ability to patch artifacts from ECOS APP

--- a/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
+++ b/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
@@ -36,6 +36,12 @@
       "config": {
         "journalId": "ecos-licenses"
       }
+    },
+    {
+      "type": "JOURNAL",
+      "config": {
+        "journalId": "ecos-artifact-patches"
+      }
     }
   ]
 }
