--- a/src/main/resources/eapps/artifacts/model/type/ecos-license.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-license.yml
@@ -8,6 +8,7 @@ system: true
 
 sourceId: eapps/ecos-license
 journalRef: uiserv/journal@ecos-licenses
+queryPermsPolicy: OWN
 
 inheritActions: false
 actions:
