--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.citeck.ecos.apps</groupId>
     <artifactId>ecos-apps</artifactId>
-    <version>2.12.0</version>
+    <version>2.13.0-SNAPSHOT</version>
     <name>EcosApps</name>
 
     <parent>
