ECOSCOM-4984 - Create functionality for adding ecos-license to the stand

--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-licenses.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-licenses.yml
@@ -3,6 +3,7 @@ id: ecos-licenses
 name: { ru: Лицензии ECOS, en: ECOS Licenses }
 
 system: true
+editable: false
 
 actions:
   - uiserv/action@download-text-yml
