--- a/src/main/resources/eapps/artifacts/model/type/ecos-license.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-license.yml
@@ -10,6 +10,10 @@ sourceId: eapps/ecos-license
 journalRef: uiserv/journal@ecos-licenses
 queryPermsPolicy: OWN
 
+dispNameTemplate:
+  ru: "Лицензия: ${?localId}"
+  en: "License: ${?localId}"
+
 inheritActions: false
 actions:
   - uiserv/action@download-text-yml
