--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-apps.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-apps.yml
@@ -9,6 +9,7 @@ actions:
   - uiserv/action@download-base64-data-zip
   - uiserv/action@delete
   - uiserv/action@edit
+  - uiserv/action@view-dashboard
 
 columns:
 
