ECOSCOM-5316 - Data list Legal entities empty

--- a/src/main/resources/eapps/artifacts/app/dev-module/ecos-dev-module.yml
+++ b/src/main/resources/eapps/artifacts/app/dev-module/ecos-dev-module.yml
@@ -8,3 +8,4 @@ actions:
   - uiserv/action@alf-reset-webscripts-repo
   - uiserv/action@alf-reset-webscripts-share
   - uiserv/action@artifact-reset-all-user-revs
+  - uiserv/action@ecos-app-full-delete
