--- a/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
+++ b/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
@@ -42,6 +42,12 @@
       "config": {
         "journalId": "ecos-artifact-patches"
       }
+    },
+    {
+      "type": "JOURNAL",
+      "config": {
+        "journalId": "changed-artifacts"
+      }
     }
   ]
 }
