ECOSCOM-4870 - Increase spring-boot and JAVA version for microservices parent template

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -29,6 +29,10 @@ ecos:
         url: jdbc:postgresql://localhost:14523/ecos_apps
         username: apps
         password: appspassword
+      main-xa-aware:
+        url: jdbc:postgresql://localhost:14523/ecos_apps
+        username: apps
+        password: appspassword
 
 # ===================================================================
 # Application specific properties
