ECOSENT-3092 - App git integration

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
         <version>2.32.4</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>6.10.0.202406032230-r</version>
+        </dependency>
+    </dependencies>
+
     <repositories>
         <repository>
             <id>citeck-public</id>
