--- a/.editorconfig
+++ b/.editorconfig
@@ -18,13 +18,10 @@ insert_final_newline = true
 
 trim_trailing_whitespace = false
 
-[{*.json, *.yml, *.yaml}]
+[{*.json,*.yaml,*.yml}]
 
 indent_size = 2
 
 [*.{kt,kts}]
 
-ktlint_standard_no-wildcard-imports = disabled
-ktlint_standard_no-empty-first-line-in-method-block = disabled
-ktlint_standard_trailing-comma-on-declaration-site = disabled
-ktlint_standard_trailing-comma-on-call-site = disabled
+disabled_rules=no-wildcard-imports,no-empty-first-line-in-method-block,trailing-comma
