--- a/src/main/resources/eapps/artifacts/model/type/ecos-app.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-app.yml
@@ -14,6 +14,9 @@ journalRef: uiserv/journal@ecos-apps
 
 defaultCreateVariant: false
 
+actions:
+  - uiserv/action@ecos-object-commit-action
+
 createVariants:
 
   - id: create
