--- a/src/main/resources/eapps/artifacts/ui/dashboard/ecos-app-type-dashboard.json
+++ b/src/main/resources/eapps/artifacts/ui/dashboard/ecos-app-type-dashboard.json
@@ -1,5 +1,6 @@
 {
   "id": "ecos-app-type-dashboard",
+  "name": null,
   "typeRef": "emodel/type@ecos-app",
   "appliedToRef": "",
   "authority": null,
@@ -133,24 +134,6 @@
     "v2": {
       "widgets": [
         {
-          "dndId": "0d0dfc44-20ca-482b-adb8-61aa346a0913",
-          "name": "doc-preview",
-          "label": "dashboard-settings.widget.preview",
-          "id": "921c9b5b-2d6c-49a2-9aad-c2c0f2841ade",
-          "props": {
-            "id": "921c9b5b-2d6c-49a2-9aad-c2c0f2841ade",
-            "config": {
-              "widgetDisplayCondition": null,
-              "elementsDisplayCondition": {},
-              "link": ""
-            }
-          },
-          "description": {
-            "ru": "Основное",
-            "en": "General"
-          }
-        },
-        {
           "dndId": "9b8f6180-1a68-4c8f-9e21-249ef2f1143d",
           "name": "properties",
           "label": "dashboard-settings.widget.properties",
@@ -163,6 +146,35 @@
               "v2": {},
               "version": "v2",
               "formMode": "EDIT"
+            }
+          },
+          "description": {
+            "ru": "Основное",
+            "en": "General"
+          }
+        },
+        {
+          "name": "journal",
+          "label": "dashboard-settings.widget.journal",
+          "additionalProps": {},
+          "dndId": "5b355960-1251-4e18-bde2-a1e50af3044a",
+          "id": "ce93979e-f72e-48f6-a632-487accb9662b",
+          "props": {
+            "id": "ce93979e-f72e-48f6-a632-487accb9662b",
+            "config": {
+              "widgetDisplayCondition": null,
+              "elementsDisplayCondition": {},
+              "version": "v2",
+              "v2": {
+                "onlyLinked": true,
+                "journalsListIds": [
+                  "uiserv/journal@ecos-app-changed-artifacts"
+                ],
+                "journalSettingId": "",
+                "journalId": "ecos-app-changed-artifacts",
+                "customJournalMode": false,
+                "customJournal": ""
+              }
             }
           },
           "description": {
@@ -188,69 +200,12 @@
           }
         },
         {
-          "dndId": "7569abc1-0015-49da-a9de-1cfb0f42096e",
-          "name": "events-history",
-          "label": "dashboard-settings.widget.events-history",
-          "id": "1ab254c7-6bc7-421c-ba90-da266648c22e",
-          "props": {
-            "id": "1ab254c7-6bc7-421c-ba90-da266648c22e",
-            "config": {
-              "widgetDisplayCondition": null,
-              "elementsDisplayCondition": {}
-            }
-          },
-          "description": {
-            "ru": "Основное",
-            "en": "General"
-          }
-        },
-        {
-          "name": "journal",
-          "label": "dashboard-settings.widget.journal",
-          "additionalProps": {},
-          "dndId": "5b355960-1251-4e18-bde2-a1e50af3044a",
-          "id": "ce93979e-f72e-48f6-a632-487accb9662b",
-          "props": {
-            "id": "ce93979e-f72e-48f6-a632-487accb9662b",
-            "config": {
-              "version": "v2",
-              "v2": {
-                "onlyLinked": true,
-                "journalsListIds": [
-                  "uiserv/journal@ecos-app-changed-artifacts"
-                ],
-                "journalSettingId": "",
-                "journalId": "ecos-app-changed-artifacts",
-                "customJournalMode": false,
-                "customJournal": ""
-              }
-            }
-          }
-        },
-        {
           "dndId": "8ecb125c-7a47-4d3b-b871-5868fbe76498",
           "name": "record-actions",
           "label": "dashboard-settings.widget.actions",
           "id": "6cb0726f-07c2-4388-84bc-6651823e2ba9",
           "props": {
             "id": "6cb0726f-07c2-4388-84bc-6651823e2ba9",
-            "config": {
-              "widgetDisplayCondition": null,
-              "elementsDisplayCondition": {}
-            }
-          },
-          "description": {
-            "ru": "Основное",
-            "en": "General"
-          }
-        },
-        {
-          "dndId": "667f668d-b568-4914-84a8-475f122d98f4",
-          "name": "versions-journal",
-          "label": "dashboard-settings.widget.versions-journal",
-          "id": "c726daad-06e9-4636-b4b1-7d7ee73c101c",
-          "props": {
-            "id": "c726daad-06e9-4636-b4b1-7d7ee73c101c",
             "config": {
               "widgetDisplayCondition": null,
               "elementsDisplayCondition": {}
@@ -276,17 +231,14 @@
           "columns": [
             {
               "widgets": [
-                "921c9b5b-2d6c-49a2-9aad-c2c0f2841ade",
                 "ecbede90-a55d-423a-9b6b-3ac523600335",
-                "291afa3a-50c1-4a3a-9700-8b85767926af",
-                "1ab254c7-6bc7-421c-ba90-da266648c22e",
-                "ce93979e-f72e-48f6-a632-487accb9662b"
+                "ce93979e-f72e-48f6-a632-487accb9662b",
+                "291afa3a-50c1-4a3a-9700-8b85767926af"
               ]
             },
             {
               "widgets": [
-                "6cb0726f-07c2-4388-84bc-6651823e2ba9",
-                "c726daad-06e9-4636-b4b1-7d7ee73c101c"
+                "6cb0726f-07c2-4388-84bc-6651823e2ba9"
               ],
               "width": "25%"
             }
@@ -304,7 +256,6 @@
           "columns": [
             {
               "widgets": [
-                "921c9b5b-2d6c-49a2-9aad-c2c0f2841ade",
                 "ecbede90-a55d-423a-9b6b-3ac523600335"
               ]
             }
