--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>ru.citeck.ecos.webapp</groupId>
         <artifactId>ecos-webapp-spring-hibernate-parent</artifactId>
-        <version>2.32.4</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <repositories>
