--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -33,6 +33,10 @@ ecos:
         url: jdbc:postgresql://localhost:14523/ecos_apps
         username: apps
         password: appspassword
+    x509:
+      keys:
+        application:
+          location: classpath:ecos/x509/keys/application.key
 
 # ===================================================================
 # Application specific properties
