ECOSENT-3092 - App git integration

--- a/src/main/resources/eapps/artifacts/ui/form/ecos_app_form.json
+++ b/src/main/resources/eapps/artifacts/ui/form/ecos_app_form.json
@@ -63,6 +63,20 @@
                     "validate": {
                       "required": true
                     }
+                  },
+                  {
+                    "label": {
+                      "ru": "Репозиторий",
+                      "en": "Repository"
+                    },
+                    "key": "repositoryEndpoint",
+                    "modalTitle": "",
+                    "journalId": "endpoints",
+                    "refreshOn": [],
+                    "optionalWhenDisabled": false,
+                    "type": "selectJournal",
+                    "input": true,
+                    "queryData": ""
                   }
                 ]
               }
