--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,14 @@
     <parent>
         <groupId>ru.citeck.ecos.webapp</groupId>
         <artifactId>ecos-webapp-spring-hibernate-parent</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.2</version>
     </parent>
+
+    <properties>
+
+        <jgit.version>6.10.0.202406032230-r</jgit.version>
+
+    </properties>
 
     <dependencies>
 
@@ -23,7 +29,7 @@
         <dependency>
             <groupId>org.eclipse.jgit</groupId>
             <artifactId>org.eclipse.jgit</artifactId>
-            <version>6.10.0.202406032230-r</version>
+            <version>${jgit.version}</version>
         </dependency>
 
     </dependencies>
