ECOSENT-3092 - Add predicate for commit action

--- a/src/main/resources/eapps/artifacts/model/type/ecos-app.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-app.yml
@@ -25,3 +25,12 @@ createVariants:
   - id: upload
     name: { ru: Загрузить приложение, en: Upload application }
     formRef: uiserv/form@ecos-module-upload
+
+model:
+  attributes:
+    - id: canBeCommittedToVcs
+      computed:
+        type: SCRIPT
+        config:
+          fn: |
+            return !!value.load('repositoryEndpoint?localId');
