--- a/src/main/resources/eapps/artifacts/ui/action/ecos-app-commit-action.yml
+++ b/src/main/resources/eapps/artifacts/ui/action/ecos-app-commit-action.yml
@@ -24,3 +24,8 @@ config:
     id: "eapps/git@${recordRef}"
     attributes:
       action: COMMIT
+
+predicate:
+  t: eq
+  a: canBeCommittedToVcs?bool
+  v: true
