ECOSENT-3092 - Set canBeCommittedToVcs as system attribute

--- a/src/main/resources/eapps/artifacts/model/type/ecos-app.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-app.yml
@@ -27,7 +27,7 @@ createVariants:
     formRef: uiserv/form@ecos-module-upload
 
 model:
-  attributes:
+  systemAttributes:
     - id: canBeCommittedToVcs
       computed:
         type: SCRIPT
