--- a/src/main/resources/eapps/artifacts/model/type/ecos-app.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-app.yml
@@ -33,4 +33,4 @@ model:
         type: SCRIPT
         config:
           fn: |
-            return !!value.load('repositoryEndpoint?localId');
+            return value.load('canVcsObjectBeCommitted?bool!');
