ECOSCOM-5409 About window

--- a/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
+++ b/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
@@ -48,6 +48,12 @@
       "config": {
         "journalId": "changed-artifacts"
       }
+    },
+    {
+      "type": "JOURNAL",
+      "config": {
+        "journalId": "system-info"
+      }
     }
   ]
 }
