--- a/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
+++ b/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
@@ -40,6 +40,12 @@
     {
       "type": "JOURNAL",
       "config": {
+        "journalId": "ecos-patches"
+      }
+    },
+    {
+      "type": "JOURNAL",
+      "config": {
         "journalId": "ecos-artifact-patches"
       }
     },
