ECOSENT-3276 - Add 'system' flag for admin workspace. Release 2.22.1

--- a/src/main/resources/eapps/artifacts/model/workspace/admin-workspace.yml
+++ b/src/main/resources/eapps/artifacts/model/workspace/admin-workspace.yml
@@ -7,6 +7,7 @@ visibility: PRIVATE
 homePageLink: "/v2/admin?type=DEV_TOOLS"
 
 icon: uiserv/icon@admin-workspace-icon
+system: true
 
 workspaceMembers:
   - id: administrators
