--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-patches.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-patches.yml
@@ -8,8 +8,7 @@ sourceId: eapps/ecos-patch
 
 actions:
   - uiserv/action@apply-ecos-patch
-  # fix asJson for patch records before uncomment this
-  # - uiserv/action@download-text-yml
+  - uiserv/action@download-ecos-patch
   - uiserv/action@delete
   - uiserv/action@edit-json
 
