ECOSENT-3501 - Admin Workspace. Permission problem

--- a/src/main/resources/eapps/artifacts/ui/action/artifact-reset-user-rev.yml
+++ b/src/main/resources/eapps/artifacts/ui/action/artifact-reset-user-rev.yml
@@ -17,3 +17,9 @@ config:
   args:
     ref: "${recordRef}"
   method: POST
+evaluator:
+  id: null
+  type: has-permission
+  inverse: false
+  config:
+    permission: Write
