--- a/src/main/resources/eapps/artifacts/ui/action/artifact-deploy.yml
+++ b/src/main/resources/eapps/artifacts/ui/action/artifact-deploy.yml
@@ -9,3 +9,9 @@ config:
   args:
     ref: "${recordRef}"
   method: POST
+evaluator:
+  id: null
+  type: has-permission
+  inverse: false
+  config:
+    permission: Write
