--- a/src/main/resources/eapps/artifacts/ui/action/artifact-reset-all-user-revs.yml
+++ b/src/main/resources/eapps/artifacts/ui/action/artifact-reset-all-user-revs.yml
@@ -17,3 +17,9 @@ type: fetch
 config:
   url: "/gateway/eapps/api/artifact/reset-all-user-revs"
   method: POST
+evaluator:
+  id: null
+  type: has-permission
+  inverse: false
+  config:
+    permission: Write
